<resources>
    <string name="app_name">Project_redbus</string>
    <string name="bus_tickets">Bus tickets</string>
    <string name="enter_source">ENTER SOURCE </string>
    <string name="enter_destination">ENTER DESTINATION</string>
    <string name="date">Sat,5 Sept</string>
    <string name="search">SEARCH</string>
    <string name="Today">TODAY</string>
    <string name="Tomorow">TOMOROW</string>
    <string name="you_can_aslo">YOU CAN ALSO BOOK</string>
    <string name="looks">Looks empty, no completed trips found.</string>
    <string name="refresh">Pull to refresh</string>
    <string name="offers">
        <a href="https://www.redbus.in/info/OfferTerms">offers</a>

    </string>
</resources>