<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        >

        <TextView
            android:id="@+id/enter_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/enter_source" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/enter_destination" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="10dp"
            android:background="@color/red"
            android:text="@string/search"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="190dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="130dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="250dp"
            android:layout_marginTop="150dp"
            android:text="@string/Today"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="150dp"
            android:text="@string/Tomorow"
            android:textColor="@color/blue"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="340dp"
android:id="@+id/after"
        android:background="@color/red"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
android:layout_marginEnd="20dp"
        android:src="@drawable/rebbusjpggg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:text="@string/bus_tickets"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/after"
    android:layout_centerHorizontal="true"
    android:text="@string/you_can_aslo"
    android:layout_marginTop="15dp"
    android:textColor="@android:color/black"
    android:textStyle="bold"
    />

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="390dp"
        android:layout_marginStart="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="jane"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="390dp"
        android:layout_marginStart="150dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kumar"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="390dp"
        android:layout_marginStart="280dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shivaraj"/>

    </androidx.cardview.widget.CardView>

<ImageView
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:src="@drawable/home_down_run"
    android:layout_alignParentBottom="true"
    android:layout_margin="40dp"
    android:id="@+id/home"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/squre_margin"
android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"

/>

<ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/music"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="200dp"

/>
<ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/account"
    android:layout_alignParentBottom="true"
   android:layout_marginRight="280dp"
/>
</RelativeLayout>